# vireo-data

./: .gitignore  README.md
docs/: docusaurus.config.ts
docs/docs/: 1_directory_structure.md  2_datasets.md
fake-data-generator/: Cargo.toml  example.config.json
fake-data-generator/.../data/equities/fake_AAPL/: data.parquet  meta.json
fake-data-generator/src/: main.rs
fake-data-generator/src/config_reader/: mod.rs
fake-data-generator/src/generators/: mod.rs
fake-data-generator/src/generators/equities/: mod.rs
fake-data-generator/src/parquet_writer/: mod.rs
gathering-scripts/eodhd.com/: README.md  lib.ts  main.ts  package.json
gathering-scripts/quantconnect/: WSInterceptor_Tampermonkey.txt  combine.ts  csv_to_parquet.ts  download_server.ts  package.json
gathering-scripts/quantconnect/futures/: FUTURES.md  futures.py  split_futures.ts
