[package]
name = "data_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
parquet = "54.3.0"
polars = {version = "0.46.0", features= ["polars-io", "parquet"]}
rand = "0.9.0"
rand_distr = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
statrs = "0.18.0"

